--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -240,7 +240,7 @@
       <rect>
        <x>10</x>
        <y>30</y>
-       <width>131</width>
+       <width>138</width>
        <height>95</height>
       </rect>
      </property>
@@ -292,7 +292,7 @@
       <item row="1" column="0">
        <widget class="QLineEdit" name="numLine">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
        </widget>
       </item>
