--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -168,23 +168,16 @@
     <property name="geometry">
      <rect>
       <x>380</x>
-      <y>50</y>
+      <y>120</y>
       <width>151</width>
-      <height>101</height>
+      <height>61</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_3">
-     <item row="1" column="0">
-      <widget class="QPushButton" name="toLeft">
-       <property name="text">
-        <string>&lt;-</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="0">
       <widget class="QPushButton" name="toRight">
        <property name="text">
-        <string>-&gt;</string>
+        <string>&lt;--&gt;</string>
        </property>
       </widget>
      </item>
@@ -317,7 +310,7 @@
     <property name="geometry">
      <rect>
       <x>380</x>
-      <y>160</y>
+      <y>40</y>
       <width>151</width>
       <height>71</height>
      </rect>
