--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -233,55 +233,48 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_6">
-     <item row="0" column="0">
-      <widget class="QPushButton" name="matrixButon_convert_1">
-       <property name="text">
-        <string>Обернути</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QPushButton" name="matrixButon_transpose_1">
-       <property name="text">
-        <string>Транспонувати</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="matrix_line_1">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
      <item row="3" column="0">
-      <widget class="QComboBox" name="matrix_operations_1">
-       <property name="currentText">
-        <string>Умножить на</string>
-       </property>
-       <item>
-        <property name="text">
-         <string>Умножить на</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Поделить на</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="4" column="0">
       <widget class="QPushButton" name="matrix_calc_1">
        <property name="text">
         <string>Розрахувати</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item row="1" column="0">
       <widget class="QPushButton" name="matrixButon_determinant_1">
        <property name="text">
         <string>Визначник</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QPushButton" name="matrixButon_transpose_1">
+       <property name="text">
+        <string>Транспонувати</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QComboBox" name="matrix_operations_1">
+       <property name="currentText">
+        <string>Помножити на</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>Помножити на</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Поділити на</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="matrix_line_1">
+       <property name="enabled">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
@@ -332,21 +325,21 @@
      <item row="0" column="0">
       <widget class="QComboBox" name="optionsBox">
        <property name="currentText">
-        <string>Сложить</string>
+        <string>Скласти</string>
        </property>
        <item>
         <property name="text">
-         <string>Сложить</string>
+         <string>Скласти</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>Вычесть</string>
+         <string>Відняти</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>Умножить</string>
+         <string>Помножити</string>
         </property>
        </item>
       </widget>
@@ -370,21 +363,38 @@
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_7">
-     <item row="2" column="1">
+     <item row="1" column="1">
       <widget class="QPushButton" name="matrixButon_determinant_2">
        <property name="text">
         <string>Визначиник</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="matrixButon_convert_2">
-       <property name="text">
-        <string>Обернути</string>
+     <item row="2" column="1">
+      <widget class="QComboBox" name="matrix_operations_2">
+       <property name="currentText">
+        <string>Помножити на</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>Помножити на</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Поділити на</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLineEdit" name="matrix_line_2">
+       <property name="enabled">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
+     <item row="0" column="1">
       <widget class="QPushButton" name="matrixButon_transpose_2">
        <property name="text">
         <string>Транспонувати</string>
@@ -392,33 +402,9 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QComboBox" name="matrix_operations_2">
-       <property name="currentText">
-        <string>Умножить на</string>
-       </property>
-       <item>
-        <property name="text">
-         <string>Умножить на</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Поделить на</string>
-        </property>
-       </item>
-      </widget>
-     </item>
-     <item row="4" column="1">
       <widget class="QPushButton" name="matrix_calc_2">
        <property name="text">
         <string>Розрахувати</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLineEdit" name="matrix_line_2">
-       <property name="enabled">
-        <bool>true</bool>
        </property>
       </widget>
      </item>
